# walrus-simple-interpreter

./: Cargo.toml  README.md
src/: lib.rs
